--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12"></div>
-    <h2>I'm Working!</h2>
+    <app-recipe></app-recipe>
+    <app-shopping-list></app-shopping-list>
   </div>
 </div>
