--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,16 @@
-<p>header works!</p>
+<div class="topnav">
+  <a href="#" class="active">Recipe Book</a>
+  <div id="#myLinks">
+    <a href="#">Recipes</a>
+    <a href="#">Shopping List</a>
+    <ul class="nav navbar-nav navbar-right">
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Save Data</a></li>
+          <li><a href="#">Fetch Data</a></li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+</div>
