recipe items in list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <div class="container">
+  <div style="height: 20px"></div>
   <div class="row">
     <div class="col-md-12"></div>
     <app-recipe></app-recipe>
